Finish Share system
